# ssl-setup

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
ssl_setup/: __init__.py  core.py
tests/: test_ssl_setup.py
